--- a/views/book_detail.pug
+++ b/views/book_detail.pug
@@ -10,7 +10,7 @@ block content
         each val, index in book.genre
             a(href=val.url) #{val.name}
             if index < book.genre.length - 1
-                |,
+                |, 
     
     div(style='margin-top:20px')
         h4 Copies
@@ -30,5 +30,10 @@ block content
                 a(href=val.url) #{val.id}
         else
             p There are no copies of this book in the library.
+    hr
+    p
+        a(href=(`${book.url}/update`)) Update 
+    p
+        a(href=(`${book.url}/delete`)) Delete 
 
     
