Book instance delete form
Added delete button to book instance detail page that takes user to delete confirmation page where they can send post request to delete book instance

--- a/views/bookinstance_details.pug
+++ b/views/bookinstance_details.pug
@@ -12,5 +12,6 @@ block content
             span.text-warning #{bookinstance.status}
     if bookinstance.status !='Available'
         p #[strong Due back:] #{bookinstance.due_back_formatted}
-    hr
     p #[small ID: #{bookinstance._id}]
+    hr
+    a(href=(`${bookinstance.url}/delete`)) Delete
