--- a/views/genre_detail.pug
+++ b/views/genre_detail.pug
@@ -11,3 +11,6 @@ block content
                 dd #{book.summary}
             else
                 p This genre has no books.
+    hr
+    p
+        a(href=(`${genre.url}/delete`)) Delete Genre 
