--- a/views/bookinstance_form.pug
+++ b/views/bookinstance_form.pug
@@ -12,7 +12,7 @@ block content
                         else
                             option(value=book._id) #{book.title}
             div.form-group
-                label(for='imprint')
+                label(for='imprint') Imprint: 
                 input#imprint.form-control(type='text' placeholder='Publisher and date information' name='imprint' required='true' value=(bookinstance==undefined?'':bookinstance.imprint))
             div.form-group
                 label(for='due_back') Date when book available: 
@@ -24,4 +24,4 @@ block content
                     option(value='Available') Available
                     option(value='Loaned') Loaned
                     option(value='Reserved') Reserved
-            button.btn.btn-preimary(type='submit') Submit
+            button.btn.btn-primary(type='submit') Submit
