Author and Genre Update Form
User can now update authors and genres

--- a/views/author_detail.pug
+++ b/views/author_detail.pug
@@ -15,4 +15,6 @@ block content
                 p This author has no books.
     hr
     p
-        a(href=(`${author.url}/delete`)) Delete author
+        a(href=(`${author.url}/update`)) Update
+        |
+        a(href=(`${author.url}/delete`) style='margin-left:20px;') Delete
