--- a/views/bookinstance_form.pug
+++ b/views/bookinstance_form.pug
@@ -1,6 +1,10 @@
 extends layout
 block content
     h1 #{title}
+        if errors
+                ul
+                for error in errors
+                    li!= error.msg
         form(method='POST' action='')
             div.form-group
                 label(for='book') Book: 
