--- a/views/genre_detail.pug
+++ b/views/genre_detail.pug
@@ -13,4 +13,6 @@ block content
                 p This genre has no books.
     hr
     p
-        a(href=(`${genre.url}/delete`)) Delete Genre 
+        a(href=(`${genre.url}/update`)) Update
+        |
+        a(href=(`${genre.url}/delete`) style='margin-left:20px;') Delete
